kubernetes/overlays/staging/frontend/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  tls:
    - hosts:
        - frontend.staging.webdemoapp.com
      secretName: frontend-staging-tls
  rules:
    - host: frontend.staging.webdemoapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
